force-app/main/default/src/objects/PJN_Affiliation__c/PJN_Affiliation__c.object-meta.xml
<CustomObject>
    <description>Stores the hierarchical relationship between people and organizations.</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AFFL-{0000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>