force-app/main/default/src/objects/PJN_Affiliation__c/fields/MVN_External_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>