force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Affiliation_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Affiliation_Display_Name__c</fullName>
    <description>Concatenation of parent account and child account to display in each record&apos;s highlights panel via compact page layout.</description>
    <formula>PJN_Parent_Account__r.Name &amp; 
&quot; &quot; &amp;
IMAGE(&quot;/resource/PJN_Affiliation/Affiliation.png&quot;,&quot;&amp;&quot;, 13, 13) &amp;
&quot; &quot; &amp;
 PJN_Child_Account__r.FirstName &amp;
&quot; &quot; &amp; 
 PJN_Child_Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliation Display Name</label>
    <type>Text</type>
</CustomField>