force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Child_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup(Account) where account is affiliated with.</description>
    <label>Child Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Staff,PJN_Physician,PJN_Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated To</relationshipLabel>
    <relationshipName>Affiliation</relationshipName>
    <type>Lookup</type>
</CustomField>