force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Child_Account_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Child_Account_Network_Id__c</fullName>
    <description>Network Key to identify the Child Account in Veeva Network</description>
    <formula>IF(AND(NOT(ISNULL( PJN_Child_Account__c )), NOT(ISBLANK( PJN_Child_Account__r.PJN_Veeva_Network_Id__c ))),
&quot;Network:Entity:&quot; + PJN_Child_Account__r.PJN_Veeva_Network_Id__c ,
&quot;&quot;)</formula>
    <label>Child Account Network Id</label>
    <type>Text</type>
</CustomField>