force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_DCR_Override__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Network DCR Override.</description>
    <label>DCR Override</label>
    <type>Checkbox</type>
</CustomField>