force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Account__c</fullName>
    <description>Master-Detail (Account) with Affiliation Members as children accounts.</description>
    <label>Parent Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliation Members</relationshipLabel>
    <relationshipName>Affiliation1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>