force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Parent_Account_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Account_Network_Id__c</fullName>
    <description>Network Key to identify the Parent Account in Veeva Network</description>
    <formula>IF(AND(NOT(ISNULL(PJN_Parent_Account__c)), NOT(ISBLANK( PJN_Parent_Account__r.PJN_Veeva_Network_Id__c ))),
&quot;Network:Entity:&quot; + PJN_Parent_Account__r.PJN_Veeva_Network_Id__c,
&quot;&quot;)</formula>
    <label>Parent Account Network Id</label>
    <type>Text</type>
</CustomField>