force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Related_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>PJN_Related_Account_Key__c</fullName>
    <description>Concatenation of Parent and Child account names.</description>
    <formula>PJN_Parent_Account__c &amp; &quot;-&quot; &amp; PJN_Child_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Key</label>
    <type>Text</type>
</CustomField>