force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Role__c.field-meta.xml
<CustomField>
    <fullName>PJN_Role__c</fullName>
    <description>Text(100) Role of the affiliated account to the Parent account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>