force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>PIcklist, affiliation statuses.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>