force-app/main/default/src/objects/PJN_Affiliation__c/fields/PJN_Veeva_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_Network_Id__c</fullName>
    <description>External ID, unique Network ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Veeva Network Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>