force-app/main/default/src/objects/PJN_Affiliation__c/validationRules/PJN_Mastered_Affiliation.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Mastered_Affiliation</fullName>
    <active>true</active>
    <description>Once the relationship is mastered the accounts can not be updated</description>
    <errorConditionFormula>AND(
 NOT( ISNEW() ),
 OR(
    ISCHANGED( PJN_Child_Account__c ),
    ISCHANGED( PJN_Parent_Account__c )
   )
)</errorConditionFormula>
    <errorMessage>This affiliation is mastered and cannot be changed. If this relationship no longer exist, please update the status to Inactve.</errorMessage>
</ValidationRule>